--- a/PRS/appsettings.json
+++ b/PRS/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PRSDbContext": "server=localhost\\sqlexpress;database=PRS;trusted_connection=true;trustservercertificate=true;"
+    "PRSDbContext": "Data Source=tcp:s30.winhost.com;Initial Catalog=DB_157195_prsdb;User ID=DB_157195_prsdb_user;Password=dwd2@22ff;Integrated Security=False;",
+    "PRSDbContextLocal": "server=localhost\\sqlexpress;database=PRS;trusted_connection=true;trustservercertificate=true;"
   }
 }
